# internal/api/oas/oas_operations_gen.go
@@ -76,9 +76,8 @@ const (
 	PasskeyLoginFinishOperation     OperationName = "PasskeyLoginFinish"
 	PasskeyRegisterBeginOperation   OperationName = "PasskeyRegisterBegin"
 	PasskeyRegisterFinishOperation  OperationName = "PasskeyRegisterFinish"
+	ReportActivityOperation         OperationName = "ReportActivity"
 	ReportEventsOperation           OperationName = "ReportEvents"
-	ReportStopsOperation            OperationName = "ReportStops"
-	ReportTripsOperation            OperationName = "ReportTrips"
 	SendCommandOperation            OperationName = "SendCommand"
 	TestNotificationOperation       OperationName = "TestNotification"
 	UpdateCalendarOperation         OperationName = "UpdateCalendar"
