# internal/api/oas/oas_parameters_gen.go
@@ -3305,6 +3305,179 @@ func decodePasskeyRegisterFinishParams(args [0]string, argsEscaped bool, r *http
 	return params, nil
 }
 
+// ReportActivityParams is parameters of reportActivity operation.
+type ReportActivityParams struct {
+	// Devices to report on (repeatable, at most 100 values; duplicates are ignored). Omitted means all
+	// devices of the user.
+	DeviceId []int64 `json:",omitempty"`
+	From     time.Time
+	To       time.Time
+}
+
+func unpackReportActivityParams(packed middleware.Parameters) (params ReportActivityParams) {
+	{
+		key := middleware.ParameterKey{
+			Name: "deviceId",
+			In:   "query",
+		}
+		if v, ok := packed[key]; ok {
+			params.DeviceId = v.([]int64)
+		}
+	}
+	{
+		key := middleware.ParameterKey{
+			Name: "from",
+			In:   "query",
+		}
+		params.From = packed[key].(time.Time)
+	}
+	{
+		key := middleware.ParameterKey{
+			Name: "to",
+			In:   "query",
+		}
+		params.To = packed[key].(time.Time)
+	}
+	return params
+}
+
+func decodeReportActivityParams(args [0]string, argsEscaped bool, r *http.Request) (params ReportActivityParams, _ error) {
+	q := uri.NewQueryDecoder(r.URL.Query())
+	// Decode query: deviceId.
+	if err := func() error {
+		cfg := uri.QueryParameterDecodingConfig{
+			Name:    "deviceId",
+			Style:   uri.QueryStyleForm,
+			Explode: true,
+		}
+
+		if err := q.HasParam(cfg); err == nil {
+			if err := q.DecodeParam(cfg, func(d uri.Decoder) error {
+				params.DeviceId = nil
+				return d.DecodeArray(func(d uri.Decoder) error {
+					var paramsDotDeviceIdVal int64
+					if err := func() error {
+						val, err := d.DecodeValue()
+						if err != nil {
+							return err
+						}
+
+						c, err := conv.ToInt64(val)
+						if err != nil {
+							return err
+						}
+
+						paramsDotDeviceIdVal = c
+						return nil
+					}(); err != nil {
+						return err
+					}
+					params.DeviceId = append(params.DeviceId, paramsDotDeviceIdVal)
+					return nil
+				})
+			}); err != nil {
+				return err
+			}
+			if err := func() error {
+				if params.DeviceId == nil {
+					return nil // optional
+				}
+				if err := (validate.Array{
+					MinLength:    0,
+					MinLengthSet: false,
+					MaxLength:    100,
+					MaxLengthSet: true,
+				}).ValidateLength(len(params.DeviceId)); err != nil {
+					return errors.Wrap(err, "array")
+				}
+				return nil
+			}(); err != nil {
+				return err
+			}
+		}
+		return nil
+	}(); err != nil {
+		return params, &ogenerrors.DecodeParamError{
+			Name: "deviceId",
+			In:   "query",
+			Err:  err,
+		}
+	}
+	// Decode query: from.
+	if err := func() error {
+		cfg := uri.QueryParameterDecodingConfig{
+			Name:    "from",
+			Style:   uri.QueryStyleForm,
+			Explode: true,
+		}
+
+		if err := q.HasParam(cfg); err == nil {
+			if err := q.DecodeParam(cfg, func(d uri.Decoder) error {
+				val, err := d.DecodeValue()
+				if err != nil {
+					return err
+				}
+
+				c, err := conv.ToDateTime(val)
+				if err != nil {
+					return err
+				}
+
+				params.From = c
+				return nil
+			}); err != nil {
+				return err
+			}
+		} else {
+			return err
+		}
+		return nil
+	}(); err != nil {
+		return params, &ogenerrors.DecodeParamError{
+			Name: "from",
+			In:   "query",
+			Err:  err,
+		}
+	}
+	// Decode query: to.
+	if err := func() error {
+		cfg := uri.QueryParameterDecodingConfig{
+			Name:    "to",
+			Style:   uri.QueryStyleForm,
+			Explode: true,
+		}
+
+		if err := q.HasParam(cfg); err == nil {
+			if err := q.DecodeParam(cfg, func(d uri.Decoder) error {
+				val, err := d.DecodeValue()
+				if err != nil {
+					return err
+				}
+
+				c, err := conv.ToDateTime(val)
+				if err != nil {
+					return err
+				}
+
+				params.To = c
+				return nil
+			}); err != nil {
+				return err
+			}
+		} else {
+			return err
+		}
+		return nil
+	}(); err != nil {
+		return params, &ogenerrors.DecodeParamError{
+			Name: "to",
+			In:   "query",
+			Err:  err,
+		}
+	}
+	return params, nil
+}
+
 // ReportEventsParams is parameters of reportEvents operation.
 type ReportEventsParams struct {
 	DeviceId OptInt64    `json:",omitempty,omitzero"`
@@ -3510,352 +3683,6 @@ func decodeReportEventsParams(args [0]string, argsEscaped bool, r *http.Request)
 			}); err != nil {
 				return err
 			}
-		}
-		return nil
-	}(); err != nil {
-		return params, &ogenerrors.DecodeParamError{
-			Name: "to",
-			In:   "query",
-			Err:  err,
-		}
-	}
-	return params, nil
-}
-
-// ReportStopsParams is parameters of reportStops operation.
-type ReportStopsParams struct {
-	// Devices to report on (repeatable, at most 100 values; duplicates are ignored). Omitted means all
-	// devices of the user.
-	DeviceId []int64 `json:",omitempty"`
-	From     time.Time
-	To       time.Time
-}
-
-func unpackReportStopsParams(packed middleware.Parameters) (params ReportStopsParams) {
-	{
-		key := middleware.ParameterKey{
-			Name: "deviceId",
-			In:   "query",
-		}
-		if v, ok := packed[key]; ok {
-			params.DeviceId = v.([]int64)
-		}
-	}
-	{
-		key := middleware.ParameterKey{
-			Name: "from",
-			In:   "query",
-		}
-		params.From = packed[key].(time.Time)
-	}
-	{
-		key := middleware.ParameterKey{
-			Name: "to",
-			In:   "query",
-		}
-		params.To = packed[key].(time.Time)
-	}
-	return params
-}
-
-func decodeReportStopsParams(args [0]string, argsEscaped bool, r *http.Request) (params ReportStopsParams, _ error) {
-	q := uri.NewQueryDecoder(r.URL.Query())
-	// Decode query: deviceId.
-	if err := func() error {
-		cfg := uri.QueryParameterDecodingConfig{
-			Name:    "deviceId",
-			Style:   uri.QueryStyleForm,
-			Explode: true,
-		}
-
-		if err := q.HasParam(cfg); err == nil {
-			if err := q.DecodeParam(cfg, func(d uri.Decoder) error {
-				params.DeviceId = nil
-				return d.DecodeArray(func(d uri.Decoder) error {
-					var paramsDotDeviceIdVal int64
-					if err := func() error {
-						val, err := d.DecodeValue()
-						if err != nil {
-							return err
-						}
-
-						c, err := conv.ToInt64(val)
-						if err != nil {
-							return err
-						}
-
-						paramsDotDeviceIdVal = c
-						return nil
-					}(); err != nil {
-						return err
-					}
-					params.DeviceId = append(params.DeviceId, paramsDotDeviceIdVal)
-					return nil
-				})
-			}); err != nil {
-				return err
-			}
-			if err := func() error {
-				if params.DeviceId == nil {
-					return nil // optional
-				}
-				if err := (validate.Array{
-					MinLength:    0,
-					MinLengthSet: false,
-					MaxLength:    100,
-					MaxLengthSet: true,
-				}).ValidateLength(len(params.DeviceId)); err != nil {
-					return errors.Wrap(err, "array")
-				}
-				return nil
-			}(); err != nil {
-				return err
-			}
-		}
-		return nil
-	}(); err != nil {
-		return params, &ogenerrors.DecodeParamError{
-			Name: "deviceId",
-			In:   "query",
-			Err:  err,
-		}
-	}
-	// Decode query: from.
-	if err := func() error {
-		cfg := uri.QueryParameterDecodingConfig{
-			Name:    "from",
-			Style:   uri.QueryStyleForm,
-			Explode: true,
-		}
-
-		if err := q.HasParam(cfg); err == nil {
-			if err := q.DecodeParam(cfg, func(d uri.Decoder) error {
-				val, err := d.DecodeValue()
-				if err != nil {
-					return err
-				}
-
-				c, err := conv.ToDateTime(val)
-				if err != nil {
-					return err
-				}
-
-				params.From = c
-				return nil
-			}); err != nil {
-				return err
-			}
-		} else {
-			return err
-		}
-		return nil
-	}(); err != nil {
-		return params, &ogenerrors.DecodeParamError{
-			Name: "from",
-			In:   "query",
-			Err:  err,
-		}
-	}
-	// Decode query: to.
-	if err := func() error {
-		cfg := uri.QueryParameterDecodingConfig{
-			Name:    "to",
-			Style:   uri.QueryStyleForm,
-			Explode: true,
-		}
-
-		if err := q.HasParam(cfg); err == nil {
-			if err := q.DecodeParam(cfg, func(d uri.Decoder) error {
-				val, err := d.DecodeValue()
-				if err != nil {
-					return err
-				}
-
-				c, err := conv.ToDateTime(val)
-				if err != nil {
-					return err
-				}
-
-				params.To = c
-				return nil
-			}); err != nil {
-				return err
-			}
-		} else {
-			return err
-		}
-		return nil
-	}(); err != nil {
-		return params, &ogenerrors.DecodeParamError{
-			Name: "to",
-			In:   "query",
-			Err:  err,
-		}
-	}
-	return params, nil
-}
-
-// ReportTripsParams is parameters of reportTrips operation.
-type ReportTripsParams struct {
-	// Devices to report on (repeatable, at most 100 values; duplicates are ignored). Omitted means all
-	// devices of the user.
-	DeviceId []int64 `json:",omitempty"`
-	From     time.Time
-	To       time.Time
-}
-
-func unpackReportTripsParams(packed middleware.Parameters) (params ReportTripsParams) {
-	{
-		key := middleware.ParameterKey{
-			Name: "deviceId",
-			In:   "query",
-		}
-		if v, ok := packed[key]; ok {
-			params.DeviceId = v.([]int64)
-		}
-	}
-	{
-		key := middleware.ParameterKey{
-			Name: "from",
-			In:   "query",
-		}
-		params.From = packed[key].(time.Time)
-	}
-	{
-		key := middleware.ParameterKey{
-			Name: "to",
-			In:   "query",
-		}
-		params.To = packed[key].(time.Time)
-	}
-	return params
-}
-
-func decodeReportTripsParams(args [0]string, argsEscaped bool, r *http.Request) (params ReportTripsParams, _ error) {
-	q := uri.NewQueryDecoder(r.URL.Query())
-	// Decode query: deviceId.
-	if err := func() error {
-		cfg := uri.QueryParameterDecodingConfig{
-			Name:    "deviceId",
-			Style:   uri.QueryStyleForm,
-			Explode: true,
-		}
-
-		if err := q.HasParam(cfg); err == nil {
-			if err := q.DecodeParam(cfg, func(d uri.Decoder) error {
-				params.DeviceId = nil
-				return d.DecodeArray(func(d uri.Decoder) error {
-					var paramsDotDeviceIdVal int64
-					if err := func() error {
-						val, err := d.DecodeValue()
-						if err != nil {
-							return err
-						}
-
-						c, err := conv.ToInt64(val)
-						if err != nil {
-							return err
-						}
-
-						paramsDotDeviceIdVal = c
-						return nil
-					}(); err != nil {
-						return err
-					}
-					params.DeviceId = append(params.DeviceId, paramsDotDeviceIdVal)
-					return nil
-				})
-			}); err != nil {
-				return err
-			}
-			if err := func() error {
-				if params.DeviceId == nil {
-					return nil // optional
-				}
-				if err := (validate.Array{
-					MinLength:    0,
-					MinLengthSet: false,
-					MaxLength:    100,
-					MaxLengthSet: true,
-				}).ValidateLength(len(params.DeviceId)); err != nil {
-					return errors.Wrap(err, "array")
-				}
-				return nil
-			}(); err != nil {
-				return err
-			}
-		}
-		return nil
-	}(); err != nil {
-		return params, &ogenerrors.DecodeParamError{
-			Name: "deviceId",
-			In:   "query",
-			Err:  err,
-		}
-	}
-	// Decode query: from.
-	if err := func() error {
-		cfg := uri.QueryParameterDecodingConfig{
-			Name:    "from",
-			Style:   uri.QueryStyleForm,
-			Explode: true,
-		}
-
-		if err := q.HasParam(cfg); err == nil {
-			if err := q.DecodeParam(cfg, func(d uri.Decoder) error {
-				val, err := d.DecodeValue()
-				if err != nil {
-					return err
-				}
-
-				c, err := conv.ToDateTime(val)
-				if err != nil {
-					return err
-				}
-
-				params.From = c
-				return nil
-			}); err != nil {
-				return err
-			}
-		} else {
-			return err
-		}
-		return nil
-	}(); err != nil {
-		return params, &ogenerrors.DecodeParamError{
-			Name: "from",
-			In:   "query",
-			Err:  err,
-		}
-	}
-	// Decode query: to.
-	if err := func() error {
-		cfg := uri.QueryParameterDecodingConfig{
-			Name:    "to",
-			Style:   uri.QueryStyleForm,
-			Explode: true,
-		}
-
-		if err := q.HasParam(cfg); err == nil {
-			if err := q.DecodeParam(cfg, func(d uri.Decoder) error {
-				val, err := d.DecodeValue()
-				if err != nil {
-					return err
-				}
-
-				c, err := conv.ToDateTime(val)
-				if err != nil {
-					return err
-				}
-
-				params.To = c
-				return nil
-			}); err != nil {
-				return err
-			}
-		} else {
-			return err
 		}
 		return nil
 	}(); err != nil {
